--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Gradient Background</title>
 </head>
-<body>
-    I'm alive
+<body id="gradient">
+    <h1>Background Generator</h1>
+    <h2> Current CSS Background</h2>
+      
+    <input  oninput="setGradient()" type="color" class="color1" name="color1" value="#00ff00">
+     <input oninput="setGradient()"  type="color" class="color2" name="color2" value="#ff0000">
+
+    <h3></h3>
 </body>
 <script src="script.js"></script>
 </html>
