CSS style appears

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Background Generator</h1>
     <h2> Current CSS Background</h2>
       
-    <input  oninput="setGradient()" type="color" class="color1" name="color1" value="#00ff00">
-     <input oninput="setGradient()"  type="color" class="color2" name="color2" value="#ff0000">
+    <input type="color" class="color1" name="color1" value="#00ff00">
+     <input type="color" class="color2" name="color2" value="#ff0000">
 
     <h3></h3>
 </body>
